BUGFIX: Prevent scrollbar issues with vertical tabs in dialog

--- a/packages/react-ui-components/src/Tabs/style.module.css
+++ b/packages/react-ui-components/src/Tabs/style.module.css
@@ -14,6 +14,10 @@
     flex-grow: 1;
 }
 
+.tabs--vertical .tabs__content {
+    overflow-y: unset;
+}
+
 .tabNavigation {
     composes: reset from '../reset.module.css';
     display: block;
@@ -132,4 +136,8 @@
 .panel {
     composes: reset from '../reset.module.css';
     overflow-y: auto;
+}
+
+.tabs--vertical .panel {
+    overflow-y: unset;
 }
